Mon Jul 15 10:16:07 2002  Carlos O'Ryan  <coryan@atdesk.com>

	* utils/catior/catior.cpp:
	  Print out unknown profiles, so at least we get some output out
	  of them.

Sat Jul 13 23:46:56 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tests/Stack_Recursion/Client_Task.cpp:
	* tests/Stack_Recursion/Client_Task.h: Fixed compile errors in
	  builds where exceptions are turned off.

Sat Jul 13 15:26:33 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tao/Utils/RIR_Narrow.cpp (narrow):
	* tao/Utils/RIR_Narrow.h: Fixed some more fuzz errors.

Sat Jul 13 15:19:20 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tests/RTCORBA/common_args.cpp (get_protocols): Fixed a compile
	  error in builds where exceptions are turned off.

Sat Jul 13 15:14:43 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tests/Nested_Upcall_Crash/client.dsp:
	* tests/Nested_Upcall_Crash/server.dsp:
	* tests/Nested_Upcall_Crash/scavenger.dsp: Fixed the dsp files to
	  include the right files. This should prevent link errors in the
	  Win32 builds.

Sat Jul 13 14:57:31 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tests/RTCORBA/Profile_And_Endpoint_Selection/client.dsp:
	* tests/RTCORBA/Profile_And_Endpoint_Selection/server.dsp: Fixed
	  the path to strategies library. Shuld fix link errors with Win32
	  builds.

Sat Jul 13 14:26:37 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tests/POA/Persistent_ID/server.cpp (method):
	* tao/Utils/RIR_Narrow.cpp: Fixed fuzz errors.

Sat Jul 13 13:22:19 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tests/Stack_Recursion/Makefile:
	* tests/Stack_Recursion/Makefile.bor:
	* tests/Stack_Recursion/server.bor:
	* tests/Stack_Recursion/client.bor: Makefiles for different
	  platforms.

	* tests/Stack_Recursion/run_test.pl: The core files should be
	  cleaned up when program exits, else the test could fill up the
	  file system and prevent other tests from running.

	* tests/Makefile: